尝试修复世界对象贴图、落点和路线可读性。